force-app/main/default/objects/Machine_Installation__c/Machine_Installation__c.object-meta.xml
<CustomObject>
    <label>Machine Installation</label>
    <nameField>
        <displayFormat>DMI-{000000}</displayFormat>
        <label>Machine Installation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Machine Installations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>