force-app/main/default/objects/Machine_Installation__c/fields/Business_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Business_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Opportunity</label>
    <referenceTo>MD_Opportunity__c</referenceTo>
    <relationshipLabel>Machine Installations</relationshipLabel>
    <relationshipName>Machine_Installations</relationshipName>
    <type>Lookup</type>
</CustomField>