force-app/main/default/objects/Machine_Installation__c/fields/Customer_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Order</label>
    <referenceTo>MD_Order__c</referenceTo>
    <relationshipLabel>Machine Installations</relationshipLabel>
    <relationshipName>Machine_Installations</relationshipName>
    <type>Lookup</type>
</CustomField>