force-app/main/default/objects/Machine_Installation__c/fields/Delivering_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Plant__c</fullName>
    <formula>text(Sales_Area__r.Delivering_Plant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivering Plant</label>
    <type>Text</type>
</CustomField>