force-app/main/default/objects/Machine_Installation__c/fields/Demo_Phase__c.field-meta.xml
<CustomField>
    <fullName>Demo_Phase__c</fullName>
    <label>Demo Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>