force-app/main/default/objects/Machine_Installation__c/fields/Diagnostic_Machine__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Machine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnostic Machine</label>
    <referenceTo>MD_Asset__c</referenceTo>
    <relationshipLabel>Machine Installations</relationshipLabel>
    <relationshipName>Machine_Installations</relationshipName>
    <type>Lookup</type>
</CustomField>