force-app/main/default/objects/Machine_Installation__c/fields/Diagnostic_Machine_Name__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Machine_Name__c</fullName>
    <formula>Diagnostic_Machine__r.Product__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diagnostic Machine Name</label>
    <type>Text</type>
</CustomField>