force-app/main/default/objects/Machine_Installation__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>text(Sales_Area__r.Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>