force-app/main/default/objects/Machine_Installation__c/fields/Extension_Count__c.field-meta.xml
<CustomField>
    <fullName>Extension_Count__c</fullName>
    <label>Extension Count</label>
    <summaryForeignKey>Demo_Extension__c.Machine_Installation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>