force-app/main/default/objects/Machine_Installation__c/fields/Machine_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Machine_Issue_Date__c</fullName>
    <label>Machine Issue Date</label>
    <type>Date</type>
</CustomField>