force-app/main/default/objects/Machine_Installation__c/fields/SAP_Account_No_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_No_Bill_To__c</fullName>
    <formula>bill_to_account__r.SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Account No (Bill To)</label>
    <type>Text</type>
</CustomField>