force-app/main/default/objects/Machine_Installation__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>When Diagnostic Machine Tag it will auto populate Serial Number from the Diagnostic Machine.</inlineHelpText>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>