force-app/main/default/objects/Machine_Installation__c/fields/Service_Request_Installation__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request (Installation)</label>
    <referenceTo>MD_Case__c</referenceTo>
    <relationshipLabel>Machine Installations</relationshipLabel>
    <relationshipName>Machine_Installations</relationshipName>
    <type>Lookup</type>
</CustomField>