force-app/main/default/objects/Machine_Installation__c/fields/Service_Request_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Recovery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request (Recovery)</label>
    <referenceTo>MD_Case__c</referenceTo>
    <relationshipLabel>Machine Installations (Service Request (Recovery))</relationshipLabel>
    <relationshipName>Machine_Installations1</relationshipName>
    <type>Lookup</type>
</CustomField>