force-app/main/default/objects/Machine_Installation__c/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Functional_Account , Service_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Machine Installations (Ship To Account)</relationshipLabel>
    <relationshipName>Machine_Installations1</relationshipName>
    <type>Lookup</type>
</CustomField>