force-app/main/default/objects/Machine_Installation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Assessment</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Invoiced/Sold</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending Asset</fullName>
                <isActive>false</isActive>
                <label>Pending Asset</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>