force-app/main/default/objects/Machine_Installation__c/fields/X10_week_alert__c.field-meta.xml
<CustomField>
    <fullName>X10_week_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>10 week alert</label>
    <type>Checkbox</type>
</CustomField>