force-app/main/default/objects/Machine_Installation__c/fields/X12_week_alert__c.field-meta.xml
<CustomField>
    <fullName>X12_week_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>12 week alert</label>
    <type>Checkbox</type>
</CustomField>