force-app/main/default/objects/Machine_Installation__c/validationRules/Inactive_Date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Date_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    AND(
        Active__c  = False,
        ISPICKVAL( Status__c , &quot;Inactive&quot;)
    ),
    ISBLANK( InActive_Date__c )
)</errorConditionFormula>
    <errorDisplayField>InActive_Date__c</errorDisplayField>
    <errorMessage>Inactive Date required when deactivating Machine.</errorMessage>
</ValidationRule>