force-app/main/default/objects/Machine_Installation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>bill_to_account__c</columns>
    <columns>Diagnostic_Machine__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>