force-app/main/default/objects/Machine_Installation__c/listViews/Diagnostic_manager_queue_Machine_Installation.listView-meta.xml
<ListView>
    <fullName>Diagnostic_manager_queue_Machine_Installation</fullName>
    <filterScope>Queue</filterScope>
    <label>Diagnostic manager queue</label>
    <queue>Diagnostic_manager_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>